syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "common.proto";

package account;

option go_package = "/pb;proto";

service AccountService {
  rpc listAccounts (AccountEmpty) returns (AccountListResponse);
  rpc createAccount (AccountRequest) returns (AccountIdResponse);
  rpc getAccountById (common.AccountId) returns (AccountResponse);
}

message AccountEmpty {}

message AccountRequest{
  string name = 1;
  string document = 2;
}

message AccountIdResponse {
  int64 account_id = 1;
}

message AccountResponse {
  int64 account_id = 1;
  string name = 2;
  string document = 3;
  google.protobuf.Timestamp created_at = 4;
  google.protobuf.Timestamp updated_at = 5;
}

message AccountListResponse {
  repeated AccountResponse accounts = 1;
}
